--- a/index.html
+++ b/index.html
@@ -1,108 +1,252 @@
-
+Like this 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shambudu Rajesh Kumar | Tech-Savvy Creator</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <style>
-        /* --- CSS VARIABLES --- */
-        :root {
-            --bg: #0f172a;
-            --card-bg: rgba(30, 41, 59, 0.7);
-            --accent: #38bdf8; /* Azure Blue */
-            --accent-2: #818cf8; /* Music Purple */
-            --text-main: #f8fafc;
-            --text-dim: #94a3b8;
-            --glass: rgba(255, 255, 255, 0.03);
-            --border: rgba(255, 255, 255, 0.1);
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shambudu Rajesh Kumar | Tech-Savvy Creator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <style>
+        /* --- CSS VARIABLES --- */
+        :root {
+            --bg: #0f172a;
+            --card-bg: rgba(30, 41, 59, 0.7);
+            --accent: #38bdf8; /* Azure Blue */
+            --accent-2: #818cf8; /* Music Purple */
+            --text-main: #f8fafc;
+            --text-dim: #94a3b8;
+            --glass: rgba(255, 255, 255, 0.03);
+            --border: rgba(255, 255, 255, 0.1);
+        }
 
-        /* --- RESET & BASE --- */
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: var(--bg);
-            color: var(--text-main);
-            line-height: 1.6;
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-        }
+        /* --- RESET & BASE --- */
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg);
+            color: var(--text-main);
+            line-height: 1.6;
+            overflow-x: hidden;
+        }
 
-        .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
+        .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
 
-        /* --- NAVIGATION --- */
-        nav {
-            padding: 1.5rem 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid var(--border);
-            background: rgba(15, 23, 42, 0.8);
-        }
-        .logo { font-weight: 800; font-size: 1.2rem; letter-spacing: -1px; }
-        .nav-links a {
-            color: var(--text-dim);
-            text-decoration: none;
-            margin-left: 2rem;
-            font-size: 0.9rem;
-            transition: 0.3s;
-        }
-        .nav-links a:hover { color: var(--accent); }
-        .cta-pill {
-            background: var(--accent);
-            color: var(--bg) !important;
-            padding: 0.5rem 1.2rem;
-            border-radius: 50px;
-            font-weight: 600;
-        }
+        /* --- NAVIGATION --- */
+        nav {
+            padding: 1.5rem 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid var(--border);
+        }
+        .logo { font-weight: 800; font-size: 1.2rem; letter-spacing: -1px; }
+        .nav-links a {
+            color: var(--text-dim);
+            text-decoration: none;
+            margin-left: 2rem;
+            font-size: 0.9rem;
+            transition: 0.3s;
+        }
+        .nav-links a:hover { color: var(--accent); }
+        .cta-pill {
+            background: var(--accent);
+            color: var(--bg) !important;
+            padding: 0.5rem 1.2rem;
+            border-radius: 50px;
+            font-weight: 600;
+        }
 
-        /* --- HERO SECTION --- */
-        header {
-            padding: 8rem 0 4rem;
-            text-align: center;
-        }
-        h1 {
-            font-size: clamp(2.5rem, 8vw, 4.5rem);
-            font-weight: 800;
-            background: linear-gradient(to right, var(--accent), var(--accent-2));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 1rem;
-        }
-        .tagline {
-            font-size: clamp(1rem, 3vw, 1.25rem);
-            color: var(--text-dim);
-            max-width: 700px;
-            margin: 0 auto 2rem;
-        }
+        /* --- HERO SECTION --- */
+        header {
+            padding: 8rem 0 4rem;
+            text-align: center;
+        }
+        h1 {
+            font-size: clamp(2.5rem, 8vw, 4.5rem);
+            font-weight: 800;
+            background: linear-gradient(to right, var(--accent), var(--accent-2));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-bottom: 1rem;
+        }
+        .typing {
+            font-size: clamp(1rem, 3vw, 1.25rem);
+            color: var(--text-dim);
+            max-width: 700px;
+            margin: 0 auto 2rem;
+        }
 
-        /* --- BENTO GRID SKILLS --- */
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
-            margin: 4rem 0;
-        }
-        .skill-card {
-            background: var(--card-bg);
-            border: 1px solid var(--border);
-            padding: 2rem;
-            border-radius: 24px;
-            transition: transform 0.3s;
-        }
-        .skill-card:hover { transform: translateY(-5px); border-color: var(--accent); }
-        .skill-card h3 { color: var(--accent); margin-bottom: 0.5rem; font-size: 0.9rem; text-transform: uppercase; }
+        /* --- BENTO GRID SKILLS --- */
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1.5rem;
+            margin: 4rem 0;
+        }
+        .skill-card {
+            background: var(--card-bg);
+            border: 1px solid var(--border);
+            padding: 2rem;
+            border-radius: 24px;
+            transition: transform 0.3s;
+        }
+        .skill-card:hover { transform: translateY(-5px); border-color: var(--accent); }
+        .skill-card h3 { color: var(--accent); margin-bottom: 0.5rem; font-size: 0.9rem; text-transform: uppercase; }
 
-        /* --- PROJECTS SECTION --- */
-        .project-section { margin: 6rem 0; }
-        .project-card {
-            display: grid;
+        /* --- PROJECTS SECTION --- */
+        .project-section { margin: 6rem 0; }
+        .project-card {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 3rem;
+            background: var(--glass);
+            border-radius: 32px;
+            padding: 3rem;
+            margin-bottom: 2rem;
+            align-items: center;
+            border: 1px solid var(--border);
+        }
+        .project-info h2 { font-size: 2rem; margin-bottom: 1rem; }
+        .project-img { width: 100%; border-radius: 16px; box-shadow: 0 20px 40px rgba(0,0,0,0.4); }
+
+        /* --- MUSIC SECTION (SHORTS) --- */
+        .music-grid {
+            text-align: center;
+            padding: 4rem 2rem;
+            background: linear-gradient(transparent, rgba(129, 140, 248, 0.05), transparent);
+        }
+        .video-wrapper {
+            max-width: 315px;
+            margin: 2rem auto;
+            border-radius: 20px;
+            overflow: hidden;
+            border: 4px solid var(--border);
+        }
+
+        /* --- FOOTER & CONTACT --- */
+        .cta-footer {
+            text-align: center;
+            padding: 6rem 0;
+            background: var(--accent);
+            color: var(--bg);
+            border-radius: 40px;
+            margin-bottom: 2rem;
+        }
+        .cta-footer h2 { font-size: 2.5rem; margin-bottom: 1rem; }
+        footer {
+            text-align: center;
+            padding: 2rem;
+            color: var(--text-dim);
+            font-size: 0.8rem;
+        }
+
+        /* --- RESPONSIVE --- */
+        @media (max-width: 768px) {
+            .project-card { grid-template-columns: 1fr; padding: 1.5rem; }
+            nav .nav-links { display: none; }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <nav>
+            <div class="logo">RAJESH KUMAR</div>
+            <div class="nav-links">
+                <a href="#about">About</a>
+                <a href="#projects">Projects</a>
+                <a href="#music">Music</a>
+                <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="cta-pill">Dream Ladders</a>
+            </div>
+        </nav>
+
+        <header>
+            <h1>Shambudu Rajesh Kumar</h1>
+            <p class="typing">Azure DevOps • Civil Engineer • Music Producer</p>
+        </header>
+
+        <section id="skills" class="skills-grid">
+            <div class="skill-card">
+                <h3>Cloud Infrastructure</h3>
+                <p>Azure DevOps, MS Azure, CI/CD Pipelines</p>
+            </div>
+            <div class="skill-card">
+                <h3>Development</h3>
+                <p>SQL, C#, HTML5, CSS3, Modern Web Tech</p>
+            </div>
+            <div class="skill-card">
+                <h3>Civil Engineering</h3>
+                <p>AutoCAD, ETABS, Structural Design</p>
+            </div>
+            <div class="skill-card">
+                <h3>Creative Arts</h3>
+                <p>FL Studio, Beat Making, Sound Engineering</p>
+            </div>
+        </section>
+
+        <section id="projects" class="project-section">
+            <div class="project-card">
+                <div class="project-info">
+                    <h2>Dream Ladders</h2>
+                    <p style="color: var(--text-dim); margin-bottom: 1.5rem;">Founder & Sole Proprietor</p>
+                    <p>Dream Ladders is where engineering meets digital innovation. I deliver end-to-end infrastructure solutions, from structural design to cloud-based deployments.</p>
+                </div>
+                <div class="project-visual">
+                    <img src="dreamladders.jpeg" alt="Dream Ladders Project" class="project-img" onerror="this.src='https://via.placeholder.com/500x300?text=Dream+Ladders'">
+                </div>
+            </div>
+        </section>
+
+        <section id="music" class="music-grid">
+            <h2>The Sound Lab</h2>
+            <p>Original Rap & Beats produced in FL Studio</p>
+            <div class="video-wrapper">
+                <iframe width="315" height="560" 
+                    src="https://www.youtube.com/embed/wntoVH2GGF4" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </section>
+
+        <section id="lets-build-together" class="cta-footer">
+            <h2>Let’s Build Together</h2>
+            <p>Currently open to collaborations in Tech, Civil Engineering, and Music.</p>
+            <br>
+            <a href="mailto:your-email@example.com" style="text-decoration:none; color:inherit; font-weight:bold; border-bottom: 2px solid black;">Get In Touch →</a>
+        </section>
+
+        <footer>
+            <p>© 2025 Shambudu Rajesh Kumar • Powered by Innovation</p>
+        </footer>
+    </div>
+
+    <script>
+        // Simple Scroll Reveal Animation
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = '1';
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        });
+
+        document.querySelectorAll('.skill-card, .project-card').forEach((el) => {
+            el.style.opacity = '0';
+            el.style.transform = 'translateY(30px)';
+            el.style.transition = 'all 0.6s ease-out';
+            observer.observe(el);
+        });
+    </script>
+</body>
+</html>            display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 3rem;
             background: var(--glass);
