--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             --accent: #38bdf8; /* Azure Blue */
             --accent-2: #c084fc; /* Creative Purple */
             --accent-eng: #10b981; /* Engineering Green */
+            --accent-tel: #fbbf24; /* Telangana Gold/Amber */
             --text-main: #f8fafc;
             --text-dim: #94a3b8;
             --border: rgba(255, 255, 255, 0.08);
@@ -48,7 +49,7 @@
             border-bottom: 1px solid var(--border);
         }
         .logo { font-weight: 800; font-size: 1.1rem; letter-spacing: -0.5px; color: #fff; text-decoration: none; }
-        .nav-links { display: flex; align-items: center; gap: 2rem; }
+        .nav-links { display: flex; align-items: center; gap: 1.5rem; }
         .nav-links a {
             color: var(--text-dim);
             text-decoration: none;
@@ -118,8 +119,9 @@
             border: 1px solid var(--border);
             border-radius: 32px;
             padding: 4rem;
-            margin-bottom: 2rem;
+            margin-bottom: 2.5rem;
             align-items: center;
+            overflow: hidden;
         }
         .btn-main {
             background: var(--accent);
@@ -168,8 +170,10 @@
         @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
         @media (max-width: 768px) {
+            .nav-links { display: none; } /* Hide complex nav on mobile for space */
             .bento-grid, .ecosystem-card { grid-template-columns: 1fr; padding: 2rem; }
             .ecosystem-card { gap: 2rem; }
+            .visual { order: -1 !important; }
         }
     </style>
 </head>
@@ -179,6 +183,7 @@
         <nav>
             <a href="#" class="logo">RAJESH KUMAR</a>
             <div class="nav-links">
+                <a href="https://rajeshshambudu.github.io/telangana.com/index.html" target="_blank">Telangana Portal</a>
                 <a href="https://rajeshshambudu.github.io/DREAM-LADDERS/" target="_blank">Collaboration Hub</a>
                 <a href="https://rajeshshambudu.github.io/dreamladders/" target="_blank" class="cta-specialty">Civil Site →</a>
             </div>
@@ -222,11 +227,22 @@
                 </div>
             </section>
 
-            <section class="ecosystem-card">
-                <div class="visual" style="order: 2;">
-                    
+            <section class="ecosystem-card" style="border-color: rgba(251, 191, 36, 0.2);">
+                <div class="visual">
+                    <img src="https://via.placeholder.com/400x300/161e2e/fbbf24?text=Telangana+Portal" alt="Telangana Project" style="width:100%; border-radius:20px; border:1px solid var(--border);">
                 </div>
-                <div class="info" style="order: 1;">
+                <div class="info">
+                    <div class="badge" style="color:var(--accent-tel); border-color: var(--accent-tel);">Cultural Identity</div>
+                    <h2>Telangana Heritage</h2>
+                    <p style="color: var(--text-dim); margin-bottom: 1.5rem;">
+                        A digital tribute to the rich history and modern progress of Telangana. Designed for seamless navigation and storytelling.
+                    </p>
+                    <a href="https://rajeshshambudu.github.io/telangana.com/index.html" target="_blank" class="btn-main" style="background:var(--accent-tel); color: #000;">Explore Portal →</a>
+                </div>
+            </section>
+
+            <section class="ecosystem-card">
+                <div class="info">
                     <div class="badge" style="color:var(--accent-eng); border-color: var(--accent-eng);">Engineering Logic</div>
                     <h2>IS 456 Design Engine</h2>
                     <p style="color: var(--text-dim); margin-bottom: 1.5rem;">
@@ -234,6 +250,8 @@
                     </p>
                     <a href="https://rajeshshambudu.github.io/IS456-2000/" target="_blank" class="btn-main" style="background:var(--accent-eng);">Launch Tool →</a>
                 </div>
+                <div class="visual">
+                    </div>
             </section>
 
             <section class="contact-box">
@@ -251,8 +269,9 @@
                 </div>
                 <div>
                     <h4 style="font-size: 14px; margin-bottom: 10px;">Navigation</h4>
-                    <ul style="list-style: none; font-size: 13px;">
+                    <ul style="list-style: none; font-size: 13px; line-height: 2;">
                         <li><a href="https://rajeshshambudu.github.io/Portfolio/" style="color: var(--text-dim); text-decoration: none;">👤 Portfolio</a></li>
+                        <li><a href="https://rajeshshambudu.github.io/telangana.com/index.html" style="color: var(--text-dim); text-decoration: none;">🏛️ Telangana Portal</a></li>
                         <li><a href="https://rajeshshambudu.github.io/DREAM-LADDERS/" style="color: var(--text-dim); text-decoration: none;">🏢 Business Brand</a></li>
                         <li><a href="https://rajeshshambudu.github.io/IS456-2000/" style="color: var(--text-dim); text-decoration: none;">🧮 Design Tool</a></li>
                     </ul>
